--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ azure-mgmt-consumption = "*"
 azure-identity = "*"
 databricks-sdk = "*"
 jupyter = "*"
+matplotlib = "*"
+seaborn = "*"
 
 [dev-packages]
 
