--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-<<<<<<< HEAD
 localstack-client = "*"
 pandas = "2.2.3"
 kubernetes = "*"
@@ -18,17 +17,7 @@ databricks-sdk = "*"
 jupyter = "*"
 matplotlib = "*"
 seaborn = "*"
-=======
-jupyter = "*"
-pandas = "*"
-requests = "*"
-python-dotenv = "*"
-boto3 = "*"
-delta-sharing = "*"
-matplotlib = "*"
-seaborn = "*"
-awswrangler = "*"
->>>>>>> c67d293 (update scripts)
+aiohttp = "*"
 
 [dev-packages]
 
